<resources>
    <string name="app_name">InstagramKotlinMVVM</string>
    <string name="main_image">Main Image</string>
    <string name="account_image">Account Image</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="account_name">Account Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="post">Post</string>
</resources>