<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="account"
            type="com.example.instagramkotlinmvvm.model.Auth" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        tools:context=".view.AuthFragment">

        <ImageView
            android:id="@+id/authImageView"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:contentDescription="@string/account_image"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_launcher_foreground" />

        <EditText
            android:id="@+id/loginAccountName"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:hint="@string/account_name"
            android:inputType="text"
            android:textAlignment="center"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textAlignment="center"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textAlignment="center"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/signInButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/sign_in" />

        <Button
            android:id="@+id/signUpButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/sign_up" />

    </LinearLayout>
</layout>